# SM5PL-WebSocketPlugin

./: CMakeLists.txt  SocketHandler.cpp  WebSocketPlugin.cpp
WebUI/: package-lock.json  package.json
WebUI/src/: App.vue  client.js
